2013-01-18  Xavi Artigas  <xartigas@fluendo.com>

	* win32/include/config-orig.h:
	  - config.h for Windows.

2013-01-18  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmltype.c: (gst_ttmltype_find):
	  - Fix overzealous detection of ttml files.

2013-01-17  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.4 ===

2013-01-17  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-check-ALL.sh:
	* testsuite/ttml-record-ALL-GOLD.sh:
	* testsuite/ttml-record.sh:
	  - Rest of tools to automate unit testing.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.sh:
	* testsuite/ttml-record.sh:
	  - Couple of tools to automate unit testing.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/Animation/Animation001.xml:
	* testsuite/Animation/Animation002.xml:
	* testsuite/Animation/Animation003.xml:
	* testsuite/Animation/Animation004.xml:
	* testsuite/Animation/Animation004b.xml:
	* testsuite/Animation/Animation005.xml:
	* testsuite/Animation/Animation006.xml:
	* testsuite/Animation/Animation007.xml:
	* testsuite/Animation/Animation008.xml:
	* testsuite/Animation/Animation012.xml:
	* testsuite/Animation/Animation013.xml:
	* testsuite/Animation/Animation014.xml:
	* testsuite/Animation/Animation015.xml:
	* testsuite/Animation/Animation016.xml:
	* testsuite/Animation/Animation017.xml:
	* testsuite/Animation/BasicTiming004.xml:
	* testsuite/Animation/BasicTiming005.xml:
	* testsuite/Animation/MediaParTiming002.xml:
	* testsuite/Animation/MediaSeqTiming007.xml:
	* testsuite/Content/Br001.xml:
	* testsuite/Content/Div001.xml:
	* testsuite/Content/Div002.xml:
	* testsuite/Content/Div003.xml:
	* testsuite/Content/Foreign001.xml:
	* testsuite/Content/Paragraph001.xml:
	* testsuite/Content/Paragraph002.xml:
	* testsuite/Content/Paragraph003.xml:
	* testsuite/Content/Paragraph004.xml:
	* testsuite/Content/Paragraph005.xml:
	* testsuite/Content/Span001.xml:
	* testsuite/Content/Span002.xml: